# burnt-peanut-network-core

./: .gitignore  Makefile  README.md  go.mod  go.sum
android/: .gitignore  KEYSTORE_MIGRATION.md  README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  ml_jni.cpp
android/app/src/main/jniLibs/: README.md
android/app/src/main/res/drawable/: ic_launcher_simple.xml
android/app/src/main/res/layout/: activity_main.xml
cabi/: ReadME.md  callbacks.go  core.h  error.go  exports.go  flow_adapters.go  flow_adapters_test.go  handles.go  main.go  shims.c  shims.h  stub_nocgo.go  types.go
credit/: balance.go  caps.go  checkpoint.go  checkpoint_test.go  decay.go  diversity.go  drip.go  params.go
crypto/: ecdh.go  hash.go  hash_test.go  sign.go  sign_test.go
dag/: chain.go  record.go
discovery/: capability.go  discovery_test.go  index.go  salted.go
gossip/: budget.go  engine.go  gossip_test.go  propagate.go  sync.go
identity/: attestation.go  identity.go  types.go
integration/: engc_e2e_test.go
node/: node.go  node_test.go
scripts/: build-android-lib.sh  ci.sh  sync-android-jnilibs.sh
storage/: checkpoints.go  db.go  file.go  forks.go  identity.go  peers.go  records.go  requests.go  transfer_state.go
transfer/: batch.go  batch_test.go  engine.go  engine_test.go  handshake.go  interfaces.go  manager.go  persist.go  policy.go  policy_test.go  security.go
wire/: README.md  codec.go  types.go
wire/proto/: core.proto  meshledger.proto
(+8 files in other folders)
